# sentence_transformers_experiments

./: README.MD  pyproject.toml
learning_sentence_transformers/: index.py
