[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "learning_sentence_transformers"
version = "0.1.0"
description = "Using sentence transformers to figure out better RAG"
authors = ["Justin Irabor <justin.irabor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.11.3"
torch = "^2.3.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
